--- a/toolbox.html
+++ b/toolbox.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline';">
     <title>toolbox - santiago martínez-oropeza</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="stylesheet" href="mobile.css">
     <style>
         :root {
             /* Light theme (default) */
