style: update button font family and styling for consistency across desktop and mobile views

--- a/toolbox.html
+++ b/toolbox.html
@@ -295,6 +295,15 @@
             cursor: pointer;
             text-decoration: none;
             transition: all 0.2s;
+            font-family: -apple-system, BlinkMacSystemFont, "SF Pro Text", "SF Pro Icons", "Helvetica Neue", Helvetica, Arial, sans-serif;
+            font-weight: 400;
+            letter-spacing: -0.01em;
+            line-height: 1;
+            height: auto;
+            min-width: auto;
+            white-space: nowrap;
+            flex-shrink: 0;
+            box-sizing: border-box;
         }
         
         .tool-button:hover {
