--- a/toolbox.html
+++ b/toolbox.html
@@ -508,7 +508,7 @@
                 <div class="tool-actions">
                         <button class="tool-button" onclick="toggleCode('illinois_institute_of_technology_truss_system')">
                         <svg width="16" height="16" viewBox="0 0 16 16">
-                            <path fill="currentColor" d="M5.28 3.22a.75.75 0 00-1.06 1.06L7.94 8l-3.72 3.72a.75.75 0 101.06 1.06l4.25-4.25a.75.75 0 000-1.06L5.28 3.22zm5.44 0a.75.75 0 011.06 1.06L8.06 8l3.72 3.72a.75.75 0 11-1.06 1.06l-4.25-4.25a.75.75 0 010-1.06l4.25-4.25z"/>
+                            <path fill="currentColor" d="M4.5 3.5L1.5 8l3 4.5L5.8 11 3.3 8l2.5-3L4.5 3.5zm7 0L10.2 5l2.5 3-2.5 3 1.3 1.5L14.5 8l-3-4.5z"/>
                         </svg>
                             view code
                     </button>
@@ -850,18 +850,18 @@
                 codePreview.style.display = 'none';
                 viewCodeButton.innerHTML = `
                     <svg width="16" height="16" viewBox="0 0 16 16">
-                        <path fill="currentColor" d="M5.28 3.22a.75.75 0 00-1.06 1.06L7.94 8l-3.72 3.72a.75.75 0 101.06 1.06l4.25-4.25a.75.75 0 000-1.06L5.28 3.22zm5.44 0a.75.75 0 011.06 1.06L8.06 8l3.72 3.72a.75.75 0 11-1.06 1.06l-4.25-4.25a.75.75 0 010-1.06l4.25-4.25z"/>
+                        <path fill="currentColor" d="M4.5 3.5L1.5 8l3 4.5L5.8 11 3.3 8l2.5-3L4.5 3.5zm7 0L10.2 5l2.5 3-2.5 3 1.3 1.5L14.5 8l-3-4.5z"/>
                     </svg>
-                    view code
+                    close
                 `;
                 return;
             }
             
             viewCodeButton.innerHTML = `
                 <svg width="16" height="16" viewBox="0 0 16 16">
-                    <path fill="currentColor" d="M5.28 3.22a.75.75 0 00-1.06 1.06L7.94 8l-3.72 3.72a.75.75 0 101.06 1.06l4.25-4.25a.75.75 0 000-1.06L5.28 3.22zm5.44 0a.75.75 0 011.06 1.06L8.06 8l3.72 3.72a.75.75 0 11-1.06 1.06l-4.25-4.25a.75.75 0 010-1.06l4.25-4.25z"/>
+                    <path fill="currentColor" d="M4.5 3.5L1.5 8l3 4.5L5.8 11 3.3 8l2.5-3L4.5 3.5zm7 0L10.2 5l2.5 3-2.5 3 1.3 1.5L14.5 8l-3-4.5z"/>
                 </svg>
-                close
+                view code
             `;
             
             try {
@@ -1014,7 +1014,7 @@
             if (button.textContent.includes('view code')) {
                 button.innerHTML = `
                     <svg width="16" height="16" viewBox="0 0 16 16">
-                        <path fill="currentColor" d="M5.28 3.22a.75.75 0 00-1.06 1.06L7.94 8l-3.72 3.72a.75.75 0 101.06 1.06l4.25-4.25a.75.75 0 000-1.06L5.28 3.22zm5.44 0a.75.75 0 011.06 1.06L8.06 8l3.72 3.72a.75.75 0 11-1.06 1.06l-4.25-4.25a.75.75 0 010-1.06l4.25-4.25z"/>
+                        <path fill="currentColor" d="M4.5 3.5L1.5 8l3 4.5L5.8 11 3.3 8l2.5-3L4.5 3.5zm7 0L10.2 5l2.5 3-2.5 3 1.3 1.5L14.5 8l-3-4.5z"/>
                     </svg>
                     view code
                 `;
