refactor: standardize HTML structure across pages - wrapped titles in .main-content div, aligned placement with index.html, maintained consistent padding and styling

--- a/toolbox.html
+++ b/toolbox.html
@@ -485,6 +485,7 @@
             <div id="clock" class="clock"></div>
         </div>
     </div>
+    <div class="main-content">
         <h1>toolbox</h1>
         <div class="active-filters" id="activeFilters"></div>
         <div class="tool-list">
