--- a/archive.html
+++ b/archive.html
@@ -528,6 +528,7 @@
             <div id="clock" class="clock"></div>
         </div>
     </div>
+    <div class="main-content">
         <h1>archive</h1>
         <div class="active-filters" id="activeFilters"></div>
         <div class="project-list">
