content: update education text format in homepage

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <h1>santiago</h1>
         <div class="revealing-text">
             born in caracas, venezuela in 1999<br>
-            bs. finance 2021<br>
+            bs.finance in 2021<br>
             m.arch loading<span class="loading-dots"></span>
         </div>
         </div>
