--- a/archive.html
+++ b/archive.html
@@ -462,7 +462,34 @@
             padding: 0.2em 0.4em;
             border-radius: 2px;
         }
-    
+
+        /* Base cursor styles for desktop */
+        @media (min-width: 769px) {
+            body {
+                cursor: none;
+            }
+
+            .custom-cursor {
+                width: 8px;
+                height: 8px;
+                background-color: var(--accent);
+                border-radius: 50%;
+                position: fixed;
+                pointer-events: none;
+                z-index: 9999;
+                transition: transform 0.1s ease;
+                transform: translate(-50%, -50%);
+            }
+
+            .custom-cursor.hover {
+                transform: translate(-50%, -50%) scale(1.5);
+            }
+
+            /* Hide cursor on interactive elements */
+            a, button, .nav-button, .theme-toggle, .tool-button, .project-header, .tool-header {
+                cursor: none;
+            }
+        }
     </style>
 </head>
 <body>
