fix: ensure default cursor is hidden for all interactive elements

--- a/archive.html
+++ b/archive.html
@@ -485,9 +485,9 @@
                 transform: translate(-50%, -50%) scale(1.5);
             }
 
-            /* Hide cursor on interactive elements */
-            a, button, .nav-button, .theme-toggle, .tool-button, .project-header, .tool-header {
-                cursor: none;
+            /* Hide cursor on all interactive elements */
+            a, button, .nav-button, .theme-toggle, .tool-button, .project-header, .tool-header, .tag, .theme-option, .project-link {
+                cursor: none !important;
             }
         }
     </style>
