feat: add red dot favicon and mobile icon support

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline';">
     <title>santiago martínez-oropeza</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="manifest" href="site.webmanifest">
     <link rel="stylesheet" href="mobile.css">
     <style>
         :root {
@@ -111,6 +115,10 @@
             margin-bottom: 2rem;
             letter-spacing: -0.02em;
             color: var(--text);
+        }
+        
+        .title-period {
+            color: var(--accent);
         }
         
         .revealing-text {
@@ -227,7 +235,7 @@
     </div>
 
     <div class="main-content">
-        <h1>santiago</h1>
+        <h1>santiago<span class="title-period">.</span></h1>
         <div class="revealing-text">
             born in caracas, venezuela in 1999<br>
             bs.finance in 2021<br>
