--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline';">
     <title>santiago martínez-oropeza</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="manifest" href="site.webmanifest">
     <link rel="stylesheet" href="mobile.css">
     <style>
         :root {
@@ -115,10 +111,12 @@
             margin-bottom: 2rem;
             letter-spacing: -0.02em;
             color: var(--text);
+            display: inline-block;
         }
         
         .title-period {
             color: var(--accent);
+            margin-left: -0.1em;
         }
         
         .revealing-text {
