chore: final commit for custom cursor implementation

--- a/index.html
+++ b/index.html
@@ -111,12 +111,6 @@
             margin-bottom: 2rem;
             letter-spacing: -0.02em;
             color: var(--text);
-            display: inline-block;
-        }
-        
-        .title-period {
-            color: var(--accent);
-            margin-left: -0.1em;
         }
         
         .revealing-text {
@@ -233,7 +227,7 @@
     </div>
 
     <div class="main-content">
-        <h1>santiago<span class="title-period">.</span></h1>
+        <h1>santiago</h1>
         <div class="revealing-text">
             born in caracas, venezuela in 1999<br>
             bs.finance in 2021<br>
